Set Java path, make path